<resources>
    <string name="app_name">BeforeYouBuy</string>
    <string name="scan">Scan something...</string>
    <string name="image">Image</string>
    <string name="powered_by_forma">Powered By Forma</string>
    <string name="logo">logo</string>
    <string name="settings">settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Forma</string>
    <string name="nav_header_subtitle">forma.main@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_favorite">Favorite</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <string name="pegada_ecol_gica">Pegada Ecológica</string>
    <string name="categoria">Categoria</string>
    <string name="subCategoria">Sub Categoria</string>
    <string name="search_hint">Pesquisa produto</string>

    <string-array name="categorias">
        <item>Produtos Lacteos</item>
        <item>Mercearia Doce</item>
    </string-array>

    <string-array name="Produtos_Lacteos">
        <item>Iogurtes</item>
        <item>Leites Soja Vegetais</item>
        <item>Ovos</item>
    </string-array>

    <string-array name="Mercearia_Doce">
        <item>Cereais e Barras</item>
        <item>Bolachas e Bolos</item>
    </string-array>


    <string-array name="Localizaçao">
        <item>Lisboa</item>
    </string-array>

</resources>