<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scanner">

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.example.beforeyoubuy.ui.scanner.ScannerFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.beforeyoubuy.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.beforeyoubuy.ui.home.HomeFragment"
        android:label="@string/menu_home"/>
</navigation>