<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanner.ScannerActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="637dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@android:color/transparent"
        android:stateListAnimator="@null"/>

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginTop="630dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/todo" />

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:autoFocusButtonVisible="false"
        app:flashButtonVisible="false"
        app:frameSize="0.6"
        app:maskColor="#3C000000"/>

    <TextView
        android:id="@+id/tv_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanner_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="80dp"
        android:text="@string/scan"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_below="@+id/scanner_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="-1dp"
        android:background="@color/white"
        android:contentDescription="@string/image" />

</RelativeLayout>